--- a/BobAndAlice.Core/BobAndAlice.Core.csproj
+++ b/BobAndAlice.Core/BobAndAlice.Core.csproj
@@ -10,4 +10,8 @@
       <None Remove="Crypto\Symmetric\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BouncyCastle" Version="1.8.9" />
+    </ItemGroup>
+
 </Project>
